zrobienie table componenta do mobile wersji

--- a/src/app/components/shared/settings-layout/settings-layout.component.html
+++ b/src/app/components/shared/settings-layout/settings-layout.component.html
@@ -1,4 +1,8 @@
-<app-nav [setMenuButton]="(isMobile$ | async) ?? false" (onClickMenuButton)="isMobileMenuOpen.set(true)"></app-nav>
+<app-nav [setMenuButton]="(isMobile$ | async) ?? false" (onClickMenuButton)="isMobileMenuOpen.set(true)">
+  @for (navButton of navButtons(); track $index) {
+    <app-nav-button [iconName]="navButton.iconName" [routerLink]="navButton.routerLink"></app-nav-button>
+  }
+</app-nav>
 <div class="flex max-sm:flex-col">
   @if (isMobile$ | async) {
     <app-drawer-menu [header]="asideMenuHeader()" [items]="items()" [(isOpen)]="isMobileMenuOpen"> </app-drawer-menu>
