--- a/src/app/modules/shop-module/components/main/main.component.html
+++ b/src/app/modules/shop-module/components/main/main.component.html
@@ -1,8 +1,8 @@
 <div class="flex flex-col gap-4">
-  <app-nav [additionalUserItems]="userItems" [setMenuButton]="true" (onClickMenuButton)="isOpenedMenu.set(true)">
+  <app-nav [additionalUserItems]="userItems()" [setMenuButton]="true" (onClickMenuButton)="isOpenedMenu.set(true)">
     <app-nav-button [iconName]="IconType.shoppingBag" [routerLink]="ClientRoute.basket"></app-nav-button>
     <app-nav-button [iconName]="IconType.heart" [routerLink]="ClientRoute.purchaseLists"></app-nav-button>
-    @if (userService.hasRole(UserType.employee) | async) {
+    @if (userService.hasRole(UserType.employee)) {
       <app-nav-button
         [iconName]="IconType.cog8Tooth"
         [routerLink]="ClientRoute.shopModule + '/' + ClientRoute.settings">
