--- a/src/app/modules/shop-module/components/main/shop-drawer-menu/shop-drawer-menu.component.html
+++ b/src/app/modules/shop-module/components/main/shop-drawer-menu/shop-drawer-menu.component.html
@@ -1,5 +1,6 @@
-<div class="w-full h-full absolute top-0 left-0 bg-neutral-500/30 backdrop-blur-sm z-50">
+<div class="flex w-full h-full absolute top-0 left-0 bg-neutral-500/30 backdrop-blur-sm z-50">
   <app-aside-menu
+    class="w-72"
     [header]="'shop-module.menu-aside-component.categories' | translate"
     [asideStyle]="'h-screen'"
     [setCloseButton]="true"
