--- a/src/app/modules/shop-module/components/settings/settings.component.html
+++ b/src/app/modules/shop-module/components/settings/settings.component.html
@@ -1,14 +1,9 @@
-<app-nav>
-  @if (userService.hasRole(UserType.employee) | async) {
-    <app-nav-button
-      [iconName]="IconType.cog8Tooth"
-      [routerLink]="'/' + ClientRoute.shopModule + '/' + ClientRoute.settings">
-    </app-nav-button>
-  }
-</app-nav>
-<div class="flex max-sm:flex-col">
-  <app-aside-menu [header]="'shop-module.settings-component.menu' | translate" [items]="items"></app-aside-menu>
+<div class="flex">
   <div class="flex-auto">
-    <router-outlet></router-outlet>
+    <app-settings-layout
+      [asideMenuHeader]="'shop-module.settings-component.menu' | translate"
+      [items]="items"
+      [navButtons]="navButtons()">
+    </app-settings-layout>
   </div>
 </div>
