Poprawa responsywności dla settingsów

--- a/src/app/modules/auth-module/auth-module.component.html
+++ b/src/app/modules/auth-module/auth-module.component.html
@@ -1,5 +1,4 @@
-<app-nav> </app-nav>
-<div class="flex max-sm:flex-col">
+<div class="flex">
   <div class="flex-auto">
     <router-outlet></router-outlet>
   </div>
