--- a/src/app/components/shared/aside-menu/aside-menu.component.html
+++ b/src/app/components/shared/aside-menu/aside-menu.component.html
@@ -1,4 +1,4 @@
-<div class="w-72 bg-neutral-900 rounded-tr-xl mr-8">
+<div class="h-full bg-neutral-900 box-border border-r border-neutral-800">
   <div class="{{ asideStyle() }} flex flex-col flex-1">
     <div class="flex justify-between items-center h-14 w-full px-4 py-2">
       <div class="flex gap-2 items-center">
