--- a/src/app/modules/shop-module/components/main/order/order.component.html
+++ b/src/app/modules/shop-module/components/main/order/order.component.html
@@ -1,6 +1,1 @@
-<script src="https://geowidget.inpost.pl/inpost-geowidget.js" defer></script>
-<script>
-  function afterPointSelected(point) {
-    alert('Selected point: ' + point.name);
-  }
-</script>
+<inpost
